[metadata]
name = opensuse_infrastructure_formula
version = attr: opensuse_infrastructure_formula.__version__
author = Georg Pfuetzenreuter
author_email = georg+python@lysergic.dev

[options]
python_requires = >=3.6
packages =
  opensuse_infrastructure_formula
  opensuse_infrastructure_formula.pillar
package_dir =
  opensuse_infrastructure_formula = main
  opensuse_infrastructure_formula.pillar = pillar
